finish logic in registration and login pages as well as guard to control access to protected routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,10 +70,11 @@
           @case (CLIENT_ROLE) {
             <li>
               <button
-                class="lg:hover:text-charcoal"
+                class="text-charcoa lg:hover:text-charcoal"
                 (click)="logout()"
-                (click)="toggleMenu()"
-              ></button>
+              >
+                Cerrar Sesion
+              </button>
             </li>
             <li>
               <nt-button
