--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -1,4 +1,5 @@
 <section
+  id="hero"
   class="flex px-mobile-padding pt-4 pb-14 justify-center border-lavender-gray border-b flex-col items-center | lg:items-center lg:justify-start lg:flex-row lg:px-desktop-padding | 2xl:py-0"
 >
   <!-- hero description section -->
