--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -1,4 +1,5 @@
 <section
+  id="about"
   class="py-12 flex flex-col items-center space-y-7 px-5 border-lavender-gray border-b | lg:py-20"
 >
   <nt-subtitle class="2xl:hidden" title="Sobre mi" />
