progressing with mobile markup and styles, calendar logic almost finished

--- a/src/app/pages/schedule/components/calendar-button/calendar-button.component.html
+++ b/src/app/pages/schedule/components/calendar-button/calendar-button.component.html
@@ -6,8 +6,11 @@
         ? selectedStyles
         : state() === 'full'
           ? takenSyles
-          : null
+          : state() === 'disable'
+            ? disableStyles
+            : null
   "
+  [disabled]="state() === 'disable' ? true : false"
 >
   {{ day() }}
 </button>
