Finish template for Calendar Desktop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Navbar -->
 <nav
-  class="flex flex-row relative px-mobile-padding py-4 items-center justify-between border-b border-lavender-gray w-full | lg:py-5 lg:px-desktop-padding lg:justify-between"
+  class="flex flex-row font-serif relative px-mobile-padding py-4 items-center justify-between border-b border-lavender-gray w-full z-50 | lg:py-5 lg:px-desktop-padding lg:justify-between"
 >
   <a
     class="flex text-2xl text-charcoal tracking-wide justify-end font-bold"
@@ -20,7 +20,7 @@
           <a
             class="lg:hover:text-charcoal"
             routerLink="/inicio"
-            routerLinkActive="active"
+            routerLinkActive=""
             (click)="toggleMenu()"
             ariaCurrentWhenActive="page"
             >Inicio</a
