--- a/src/app/pages/calendar/components/calendar-button/calendar-button.component.html
+++ b/src/app/pages/calendar/components/calendar-button/calendar-button.component.html
@@ -12,5 +12,5 @@
   "
   [disabled]="state() === 'disable' ? true : false"
 >
-  {{ day() }}
+  <p [ngClass]="state() === 'disable' ? 'opacity-30' : ''">{{ day() }}</p>
 </button>
