--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -1,72 +1,110 @@
-<section>
-  <nt-calendar
-    [selectedDate]="selectedDate()"
-    (dateChange)="dateDidChange($event)"
-    [notAvailableDays]="notAvailableDays"
-  />
-  <div class="space-y-3 mt-6 flex flex-col items-center">
-    <h2 class="text-lg text-primary-purple tracking-wide">
-      Seleccione una hora
+<section class="lg:flex lg:justify-center">
+  <div
+    class="flex flex-col mt-10 mb-20 items-center | lg:space-y-6 lg:w-big-container"
+  >
+    <h2 class="hidden | lg:block lg:text-2xl lg:text-primary-purple">
+      Seleccione una fecha
     </h2>
-    <div class="space-x-8">
-      <button
-        (click)="updateHour(-1)"
-        class="text-3xl text-charcoal font-light"
-      >
-        -
-      </button>
-      <span
-        class="py-2 px-6 text-lg text-primary-purple border border-charcoal rounded-md"
-        >{{
-          selectedDate().toLocaleTimeString("en-US", {
-            hour: "2-digit",
-            minute: "2-digit",
-          })
-        }}</span
-      >
-      <button
-        (click)="updateHour(+1)"
-        class="text-3xl text-charcoal font-light"
-      >
-        +
-      </button>
-    </div>
-  </div>
-  <div class="space-y-4 mt-8 flex flex-col items-center">
-    <h2 class="text-lg text-primary-purple tracking-wide">
-      Seleccione modalidad
-    </h2>
-    <div class="flex space-x-6">
-      <button
-        (click)="setAppointmentIsOnline(false)"
-        class="flex items-center justify-center space-x-2"
-      >
-        <span class="border border-primary-purple rounded-full p-1 flex">
-          <span
-            [ngClass]="isAppointmentOnline() ? notSelectedClass : selectedClass"
-          ></span>
-        </span>
-        <p class="text-charcoal">Presencial</p>
-      </button>
-      <button
-        (click)="setAppointmentIsOnline(true)"
-        class="flex items-center justify-center space-x-2"
-      >
-        <span class="border border-primary-purple rounded-full p-1 flex">
-          <span
-            [ngClass]="isAppointmentOnline() ? selectedClass : notSelectedClass"
-          ></span>
-        </span>
-        <p class="text-charcoal">Teleconsulta</p>
-      </button>
-    </div>
-  </div>
-  <div class="flex space-x-6 items-center justify-center mt-8 mb-10">
-    <nt-button
-      [isPrimary]="true"
-      label="Reservar"
-      (click)="saveAppointment()"
+    <nt-calendar
+      [selectedDate]="selectedDate()"
+      (dateChange)="dateDidChange($event)"
+      [notAvailableDays]="notAvailableDays"
+      class="w-full"
     />
-    <button class="text-charcoal">Cancelar</button>
+  </div>
+  <div class="lg:w-small-container border-l border-lavender-gray">
+    <div class="text-center mt-12 space-y-6">
+      <h2 class="hidden | lg:block lg:text-2xl lg:text-primary-purple">
+        Cita actual
+      </h2>
+      <div
+        class="flex flex-col text-white rounded-lg items-start bg-primary-purple max-w-72 mx-auto py-4 px-6 outline outline-1 outline-charcoal"
+      >
+        <span class="text-xl font-bold tracking-wide p-0 m-0">{{
+          selectedDate().getDate() + " de " + getMonthName()
+        }}</span>
+        <div class="flex justify-between w-full">
+          <span class="opacity-60 text-lg m-0 p-0"
+            >{{
+              selectedDate().toLocaleTimeString("en-US", {
+                hour: "2-digit",
+                minute: "2-digit",
+              })
+            }}
+            &nbsp;/&nbsp;
+            {{ isAppointmentOnline() ? "Teleconsulta" : "Presencial" }}</span
+          >
+        </div>
+      </div>
+    </div>
+    <div class="space-y-3 mt-10 flex flex-col items-center">
+      <h3 class="text-lg text-primary-purple tracking-wide">
+        Seleccione una hora
+      </h3>
+      <div class="space-x-8">
+        <button
+          (click)="updateHour(-1)"
+          class="text-3xl text-charcoal font-light"
+        >
+          -
+        </button>
+        <span
+          class="py-2 px-6 text-lg text-primary-purple border border-charcoal rounded-md"
+          >{{
+            selectedDate().toLocaleTimeString("en-US", {
+              hour: "2-digit",
+              minute: "2-digit",
+            })
+          }}</span
+        >
+        <button
+          (click)="updateHour(+1)"
+          class="text-3xl text-charcoal font-light"
+        >
+          +
+        </button>
+      </div>
+    </div>
+    <div class="space-y-4 mt-8 flex flex-col items-center">
+      <h2 class="text-lg text-primary-purple tracking-wide">
+        Seleccione modalidad
+      </h2>
+      <div class="flex space-x-6">
+        <button
+          (click)="setAppointmentIsOnline(false)"
+          class="flex items-center justify-center space-x-2"
+        >
+          <span class="border border-primary-purple rounded-full p-1 flex">
+            <span
+              [ngClass]="
+                isAppointmentOnline() ? notSelectedClass : selectedClass
+              "
+            ></span>
+          </span>
+          <p class="text-charcoal">Presencial</p>
+        </button>
+        <button
+          (click)="setAppointmentIsOnline(true)"
+          class="flex items-center justify-center space-x-2"
+        >
+          <span class="border border-primary-purple rounded-full p-1 flex">
+            <span
+              [ngClass]="
+                isAppointmentOnline() ? selectedClass : notSelectedClass
+              "
+            ></span>
+          </span>
+          <p class="text-charcoal">Teleconsulta</p>
+        </button>
+      </div>
+    </div>
+    <div class="flex space-x-6 items-center justify-center mt-8 mb-10">
+      <nt-button
+        [isPrimary]="true"
+        label="Reservar"
+        (click)="saveAppointment()"
+      />
+      <button class="text-charcoal">Cancelar</button>
+    </div>
   </div>
 </section>
