--- a/src/app/pages/administration/administration.component.html
+++ b/src/app/pages/administration/administration.component.html
@@ -1,1 +1,82 @@
-<p>administration works!</p>
+<section class="flex">
+  <aside class="w-52 h-full">
+    <ul class="w-full">
+      <li class="w-full">
+        <button
+          [ngClass]="
+            inClientSection() ? baseStyles : baseStyles + selectedStyles
+          "
+          (click)="setClientSection(false)"
+        >
+          <svg
+            width="35"
+            viewBox="0 0 21 21"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1.75 10.5C1.75 7.20017 1.75 5.55026 2.77512 4.52512C3.80026 3.5 5.45017 3.5 8.75 3.5H12.25C15.5498 3.5 17.1998 3.5 18.2248 4.52512C19.25 5.55026 19.25 7.20017 19.25 10.5V12.25C19.25 15.5498 19.25 17.1998 18.2248 18.2248C17.1998 19.25 15.5498 19.25 12.25 19.25H8.75C5.45017 19.25 3.80026 19.25 2.77512 18.2248C1.75 17.1998 1.75 15.5498 1.75 12.25V10.5Z"
+              [attr.stroke]="inClientSection() ? purple : 'white'"
+            />
+            <path
+              opacity="0.5"
+              d="M6.125 3.5V2.1875"
+              [attr.stroke]="inClientSection() ? purple : 'white'"
+              stroke-linecap="round"
+            />
+            <path
+              opacity="0.5"
+              d="M14.875 3.5V2.1875"
+              [attr.stroke]="inClientSection() ? purple : 'white'"
+              stroke-linecap="round"
+            />
+            <path
+              opacity="0.5"
+              d="M1.75 7.875H19.25"
+              [attr.stroke]="inClientSection() ? purple : 'white'"
+              stroke-linecap="round"
+            />
+            <path
+              d="M7.875 12.6875L9.1875 11.375V14.875"
+              [attr.stroke]="inClientSection() ? purple : 'white'"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M11.375 14V12.25C11.375 11.7667 11.7667 11.375 12.25 11.375C12.7333 11.375 13.125 11.7667 13.125 12.25V14C13.125 14.4833 12.7333 14.875 12.25 14.875C11.7667 14.875 11.375 14.4833 11.375 14Z"
+              [attr.stroke]="inClientSection() ? purple : 'white'"
+              stroke-linecap="round"
+            />
+          </svg>
+          <span>Agenda</span>
+        </button>
+      </li>
+      <li>
+        <button
+          [ngClass]="
+            inClientSection() ? baseStyles + selectedStyles : baseStyles
+          "
+          (click)="setClientSection(true)"
+        >
+          <svg
+            width="35"
+            viewBox="0 0 21 21"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M10.5 8.75C12.433 8.75 14 7.183 14 5.25C14 3.317 12.433 1.75 10.5 1.75C8.567 1.75 7 3.317 7 5.25C7 7.183 8.567 8.75 10.5 8.75Z"
+              [attr.stroke]="inClientSection() ? 'white' : purple"
+            />
+            <path
+              d="M17.4978 15.75C17.5 15.6063 17.5 15.4604 17.5 15.3125C17.5 13.1379 14.366 11.375 10.5 11.375C6.634 11.375 3.5 13.1379 3.5 15.3125C3.5 17.4871 3.5 19.25 10.5 19.25C12.4521 19.25 13.8598 19.1129 14.875 18.868"
+              [attr.stroke]="inClientSection() ? 'white' : purple"
+              stroke-linecap="round"
+            />
+          </svg>
+          <span>Clientes</span>
+        </button>
+      </li>
+    </ul>
+  </aside>
+</section>
