un tested implementation of NewClient model

--- a/src/app/pages/administration/components/user-list/user-box/user-box.component.html
+++ b/src/app/pages/administration/components/user-list/user-box/user-box.component.html
@@ -6,7 +6,7 @@
   <ul>
     <li class="flex space-x-4">
       <img src="phone-icon.svg" width="20" height="20" />
-      <span>{{ user().phone }}</span>
+      <span>{{ user().phoneNumber }}</span>
     </li>
     <li>
       {{ user().rut }}
