unfinish user box

--- a/src/app/pages/administration/administration.component.html
+++ b/src/app/pages/administration/administration.component.html
@@ -1,6 +1,6 @@
-<section class="flex">
-  <aside class="w-52 h-full">
-    <ul class="w-full">
+<section class="flex flex-grow">
+  <aside class="w-52 border-r border-lavender-gray">
+    <ul class="w-full h-dvh">
       <li class="w-full">
         <button
           [ngClass]="
