--- a/src/app/pages/administration/components/user-list/user-list.component.html
+++ b/src/app/pages/administration/components/user-list/user-list.component.html
@@ -1,3 +1,5 @@
-@for (user of userList; track $index) {
-  <nt-user-box [user]="user" />
-}
+<article class="p-14">
+  @for (user of userList; track $index) {
+    <nt-user-box [user]="user" />
+  }
+</article>
