--- a/src/app/pages/administration/components/user-list/user-list.component.html
+++ b/src/app/pages/administration/components/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<article class="p-14">
+<article class="p-14 flex space-x-20">
   @for (user of userList; track $index) {
     <nt-user-box [user]="user" />
   }
